--- a/wikipedia-copy-page-mutants.css
+++ b/wikipedia-copy-page-mutants.css
@@ -1,27 +1,99 @@
-/* GENERAL STYLES */
-
 * {
   box-sizing: border-box;
 }
 
-body {
-  background-color: #ddd;
+/* GENERAL STYLES */
+
+/* Single-direction margin declaration to establish vertical rhythm. */
+h1,h2,h3,h4,h5,h6,
+ul,ol,
+p,
+img {
+    margin-bottom: 1.5rem;
 }
 
+
+/* Configurează fundalul imaginii. */
+
+body {
+  background-color: #f6f6f6;
+  font-family: sans-serif;
+  font-size: 1.125rem;
+  line-height: 1.5;
+  min-width: 30.125rem;
+}
+
+h1, h2 {
+  font-family: Georgia;
+}
+
+.float-left {
+  float: left;
+}
+
+.float-right {
+  float: right;
+}
+
+/* clear float */
+
+.float-left::after,
+.float-right::after {
+  content: "";
+  clear: both;
+  /* display: table; */
+}
+
+
+/* Definește proprietățile obișnuite ale modelului cutie pentru containerele de pe pagină (secțiunile).
+ */
+
+.locations,
+.program,
+.gifts,
+.faq,
+.contact {
+  width: 95%;
+  margin: 1.5rem auto;
+  padding: .5rem 1rem;
+  text-align: center;
+}
+
+
+/* Leagă fonturile externe și adaugă stilurile tipografice de bază. */
+
+
+
+
+
+
+section {
+  margin-bottom: 1.5rem;
+  padding: .5rem .25rem;
+}
+
+
+
+
+
+
+
 aside {
-  background-color: #aaa;
-  width: 3rem;
+  /* background-color: #f6f6f6; */
+  width: 10rem;
+  /* float: left; */
   /* height: 100vh; */
 }
 
-header {
-  background-color: #777;
-  width: 80vw;
-  height: 3rem;
+aside img {
+  width: 100%;
 }
 
 main {
   background-color: #fff;
+  /* float: right; */
+  width: calc(100% - 10rem);
+  min-width: 20.125rem;
 }
 
 
